<resources>
    <string name="app_name">Paranoid Android</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <!-- cell / wifi strings -->
    <string name="wifi_cells_activity_title">Radio</string>
    <string name="cells_table_title">Cells</string>
    <string name="wifi_title">WiFi</string>
    <string name="bluetooth_title">Bluetooth Devices</string>
    <string name="mcc_string">MCC</string>
    <string name="mnc_string">MNC</string>
    <string name="cid_string">CID</string>
    <string name="lac_string">LAC</string>
    <string name="psc_string">PSC</string>
    <string name="dbm_string">dBm</string>
    <string name="ssid_string">SSID</string>
    <string name="channel_string">Ch</string>
    <string name="bluetooth_name_string">Name</string>
    <string name="bluetooth_address_string">Address</string>
    <string name="bluetooth_rssi_string">RSSI</string>
    <string name="bluetooth_type_string">Type</string>
    <string name="bluetooth_no_data_string">No bluetooth device detected</string>
    <string name="wifi_no_data_string">No WiFi access points detected</string>
    <string name="cell_no_data_string">No cells detected</string>

    <!-- sensor strings -->
    <string name="sensors_activity_title">Sensors</string>
    <string name="sensors_title">Sensors</string>
    <string name="sensors_name">Name</string>
    <string name="sensors_xcoord">X Axis</string>
    <string name="sensors_ycoord">Y Axis</string>
    <string name="sensors_zcoord">Z Axis</string>

    <!-- location strings -->
    <string name="location_activity_title">Location</string>

    <!-- app traffic info strings -->
    <string name="app_traffic_title">Application traffic</string>
    <string name="app_traffic_error_message">Couldn\'t retrieve app network usage information.</string>

    <!-- app traffic details dialog -->
    <string name="app_traffic_activity_title">App Traffic</string>
    <string name="app_detail_pkg_name">Package name</string>
    <string name="app_detail_uid">UID</string>
    <string name="app_detail_wifi_transmitted">Transmitted via WiFi</string>
    <string name="app_detail_wifi_received">Received via WiFi</string>
    <string name="app_detail_cellular_transmitted">Transmitted via cellular</string>
    <string name="app_detail_cellular_received">Received via cellular</string>

    <!-- action bar buttons -->
    <string name="action_radio">Radio</string>
    <string name="action_traffic">Traffic</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_map">Location</string>

    <!-- usb events -->
    <string name="device_connected_title">Device connected</string>
    <string name="device_connected">Device with ID %1$s:%2$s was connected. Do you wish to trust this device?</string>
    <string name="device_disconnected_title">Device disconnected</string>
    <string name="device_disconnected">Device with ID %1$s:%2$s was disconnected.</string>
    <string name="accessory_connected_title">Unknown accessory connected</string>
    <string name="accessory_connected">Accessory %1$s with serial number %2$s was connected.</string>
    <string name="accessory_disconnected_title">Accessory disconnected</string>
    <string name="accessory_disconnected">Accessory %1$s with serial number %2$s was disconnected.</string>
    <string name="device_untrusted">Currently connected device %1$s:%2$s isn\'t on the trusted list.</string>
    <string name="accessory_untrusted">Currently connected accessory %1$s with serial number %2$s isn\'t on the trusted list.</string>

    <!-- buttons -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="ok_button">OK</string>

    <!-- error messages -->
    <string name="warning_title">WARNING</string>
    <string name="crash_title">ERROR</string>
    <string name="crash_message">An error has occurred. Paranoid Android will now close.</string>

    <!-- notifications messages -->
    <string name="currently_monitoring_title">Monitoring!</string>
    <string name="currently_monitoring_message">The monitoring service is currently running.</string>
    <string name="trusted_usb_device">A trusted USB device has been connected! (%1$s:%2$s)</string>
    <string name="trusted_usb_accessory">A trusted USB accessory has been connected! (%1$s)</string>
    <string name="untrusted_usb_device">An untrusted or unknown USB device has been connected! (%1$s:%2$s)</string>
    <string name="untrusted_usb_accessory">An untrusted or unknown USB accessory has been connected! (%1$s)</string>
    <string name="new_ap_associated_title">New access point</string>
    <string name="new_ap_associated_desc">%1$s (%2$s) has never been connected by this device before</string>
    <string name="untrusted_ap_associated_title">Untrusted access point</string>
    <string name="untrusted_ap_associated_desc">%1$s (%2$s) has been connected to before, but remains untrusted.</string>
    <string name="ap_changed_sec_title">AP security algorithm changed</string>
    <string name="ap_changed_sec_desc">%1$s: from %2$s to %3$s</string>
    <string name="ap_changed_sec_no_sec">none</string>
    <string name="ap_similar_title">Similar AP detected</string>
    <string name="ap_similar_desc_one">There is record of another AP with SSID \'%1$s\' but with a different BSSID value</string>
    <string name="ap_similar_desc_many">There are %1$d records of AP\'s with SSID \'%2$s\' but with different BSSID values</string>

    <!-- permissions -->
    <string name="title_activity_permissions">PermissionsActivity</string>
    <string name="permission_access_coarse_location_title">Access coarse location</string>
    <string name="permission_access_coarse_location_message">Paranoid Android needs this in order to obtain information from currently associated and neighbouring base stations</string>
    <string name="permission_access_network_state_title">Access network state</string>
    <string name="permission_access_network_state_message">Paranoid Android needs this in order to obtain info from current connection.</string>
    <string name="permission_access_wifi_state_title">Access WiFi state</string>
    <string name="permission_access_wifi_state_message">Paranoid Android needs this in order to obtain info from current connection, and obtain scan results.</string>
    <string name="permission_change_wifi_state_title">Change WiFi state</string>
    <string name="permission_change_wifi_state_message">Paranoid Android uses this permission so it can initiate a scan for AP\'s.</string>
    <string name="permission_write_external_storage_title">Write to external storage</string>
    <string name="permission_write_external_storage_message">This permission is used by a dependency of Paranoid Android, osmdroid (OpenStreetMaps).</string>
    <!--<string name="permission_internet_title"></string>-->
    <!--<string name="permission_internet_message"></string>-->
    <string name="permission_bluetooth_title">Bluetooth</string>
    <string name="permission_bluetooth_message">This permission is used to verify the adapter state and obtain current connection information.</string>
    <string name="permission_bluetooth_admin_title">Bluetooth admin</string>
    <string name="permission_bluetooth_admin_message">Paranoid Android uses this permission to be able to initiate discovery of nearby bluetooth devices.</string>
    <string name="permission_read_phone_state_title">Read phone state</string>
    <string name="permission_read_phone_state_message">Paranoid Android uses this permission in order to obtain the unique subscriber ID of this cell phone (IMEI, IMSI, …). This is necessary to obtain network usage statistics using mobile networks.</string>
    <string name="permission_package_usage_stats_title">Package usage stats</string>
    <string name="permission_package_usage_stats_message">*** Please enable this manually, in Android settings. ***\n\nParanoid Android uses this permission so it has the ability to obtain network usage statistics from all applications.</string>

    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="disconnecting">disconnecting</string>
    <string name="disconnected">disconnected</string>

</resources>
