<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cells_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registered_cells_table_title"
                style="@style/titleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registered_cells_table_title" />

            <!--<LinearLayout-->
                <!--android:id="@+id/cells_table_header_layout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical">-->

            <!--</LinearLayout>-->

            <TableLayout
                android:id="@+id/registered_cells_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/listDivider"
                android:showDividers="beginning|middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/generation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/mcc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/mcc_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mnc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/mnc_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/cid_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lac"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/lac_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/psc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/psc_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cell_dbm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dbm_string"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/neighbouring_cells_table_title"
                style="@style/titleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/neighbouring_cells_table_title" />

            <TableLayout
                android:id="@+id/neighbouring_cells_table"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:divider="?android:attr/listDivider"
                android:showDividers="beginning|middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/neighbouring_cell_generation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/neighbouring_cell_psc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/psc_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/neighbouring_cell_dbm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dbm_string"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wifi_title"
                style="@style/titleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_title" />

            <TableLayout
                android:id="@+id/wifi_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/listDivider"
                android:showDividers="beginning|middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/security_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/security_label"
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                    <TableLayout
                        android:id="@+id/ssid_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="?android:attr/listDivider"
                        android:showDividers="">

                        <TableRow
                            android:id="@+id/ssid_row"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/ssid"
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:text="@string/ssid_string"
                                android:textStyle="bold" />

                        </TableRow>
                    </TableLayout>

                    <TextView
                        android:id="@+id/channel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/channel_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wifi_dbm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dbm_string"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bluetooth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bluetooth_title"
                style="@style/titleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_title" />

            <TableLayout
                android:id="@+id/bluetooth_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/listDivider"
                android:showDividers="beginning|middle">

                <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_name_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="30sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_address_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_type_string"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rssi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_rssi_string"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
