<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/security_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/security_label"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <TableLayout
        android:id="@+id/ssid_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/listDivider"
        android:showDividers="" >

        <TableRow
            android:id="@+id/ssid_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ssid"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/ssid_string"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/channel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/channel_string"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wifi_dbm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/dbm_string"
        android:textStyle="bold" />

</TableRow>